Added div data-view

--- a/index.html
+++ b/index.html
@@ -17,6 +17,26 @@
 <body>
   <header>
   </header>
+  <div data-view="entry-form">
+    <form>
+      <div>
+        <label for="title">Title</label>
+        <input type="type" name="title" id="title">
+      </div>
+      <div>
+        <label for="photo-url">Photo URL</label>
+        <input type="type" name="photo-url" id="photo-url">
+      </div>
+      <div>
+        <label for="notes"></label>
+        <input type="textbox" name="notes" id="notes">
+      </div>
+      <div>
+        <input type="submit" value="SAVE">
+      </div>
+    </form>
+  </div>
+
   <main>
   </main>
   <script src="js/data.js"></script>
