--- a/index.html
+++ b/index.html
@@ -17,25 +17,37 @@
 <body>
   <header>
   </header>
-  <div data-view="entry-form">
-    <form>
-      <div>
-        <label for="title">Title</label>
-        <input type="type" name="title" id="title">
+  <div class="container">
+    <div class="row">
+
+      <div class="form-div" data-view="entry-form">
+        <div class="head-box">
+          <p class="head-box-text">Code Journal</p>
+        </div>
+        <h2 class="form-h2">New Entry</h2>
+        <img src="images/placeholder-image-square.jpg" alt="placeholder" class="placeholder-img">
+        <form>
+          <div>
+            <label for="title" class="form-label">Title</label><br>
+            <input type="type" name="title" id="title" required>
+          </div>
+          <div>
+            <label for="photo-url" class="form-label">Photo URL</label><br>
+            <input type="type" name="photo-url" id="photo-url" required>
+          </div>
+          <div>
+            <label for="notes" class="form-label">Notes</label><br>
+            <input type="textbox" name="notes" id="notes" required>
+          </div>
+          <div>
+            <input class="form-button" type="submit" value="SAVE" >
+          </div>
+        </form>
       </div>
-      <div>
-        <label for="photo-url">Photo URL</label>
-        <input type="type" name="photo-url" id="photo-url">
-      </div>
-      <div>
-        <label for="notes"></label>
-        <input type="textbox" name="notes" id="notes">
-      </div>
-      <div>
-        <input type="submit" value="SAVE">
-      </div>
-    </form>
+
+    </div>
   </div>
+
 
   <main>
   </main>
