Add event listener for adding image url

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
                   <div class="form-item-div">
                     <label for="photo-url" class="form-label">Photo URL</label><br>
-                    <input type="type" name="photo-url" id="photo-url" class="rounded" required>
+                    <input type="type" name="photo-url" id="photo-url" class="photoUrl rounded" required>
                   </div>
 
                 </div>
