Finished form input

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
           <div>
             <!-- <input class="form-button" type="submit" value="SAVE" > -->
-            <button type="submit" form="codeform" class="rounded" value="SAVE">SAVE</button>
+            <button type="submit" form="codeform" class="rounded" >SAVE</button>
           </div>
 
         </form>
