--- a/index.html
+++ b/index.html
@@ -15,33 +15,37 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <header>
 
-    <div class="header-div">
-      <div class="head-box-text">Code Journal </div>
-    </div>
-  </header>
-
-
-
+  <header></header>
 
 
   <div class="container">
 
 
-      <div class="form-div" data-view="entry-form">
+          <div class="row header-div">
+            <div class="column-half">
+             <h3 class="head-box-text">Code Journal</h3>
+            </div>
+          </div>
 
-        <h2 class="form-h2 margin-left-form">New Entry</h2>
+
+      <div class="form-div" data-view="entry-form">
+        <div class="row">
+          <div class="column-full">
+            <h1 class="form-h1">New Entry</h1>
+          </div>
+        </div>
+
 
         <form id="codeform">
           <div class="row">
 
-            <div class=" column-half">
-              <img src="images/placeholder-image-square.jpg" alt="placeholder" class="placeholder-img rounded">
+            <div class="column-half">
+              <img src="images/placeholder-image-square.jpg" alt="placeholder" class="placeholder-img rounded form-item-div">
             </div>
 
               <div class="column-half">
-                <div >
+
 
                   <div class="form-item-div input-bottom-margin">
                     <label for="title" class="form-label">Title</label><br>
@@ -54,19 +58,25 @@
                   </div>
 
                 </div>
-             </div>
 
             </div>
 
 
           <div class="form-item-div">
-            <label for="notes" class="form-label margin-left-form">Notes</label><br>
-             <textarea class="column-full margin-left-form"  id="notes" name="notes" rows="5" cols="33" required></textarea>
-
+            <div class="row">
+              <div class="column-full">
+               <label for="notes" class="form-label ">Notes</label><br>
+               <textarea class="column-full"  id="notes" name="notes" rows="5" cols="33" required></textarea>
+            </div>
+            </div>
           </div>
 
-          <div>
-             <button type="submit" form="codeform" class="rounded" >SAVE</button>
+
+
+          <div class="row">
+            <div class="column-full">
+               <button type="submit" form="codeform" class="rounded" >SAVE</button>
+            </div>
           </div>
 
         </form>
