Comment revisions round 3

--- a/index.html
+++ b/index.html
@@ -15,14 +15,16 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <div class="container">
-      <header>
+    <header>
+      <div class="container">
         <div class="row header-div">
           <div class="column-half">
             <h3 class="head-box-text">Code Journal</h3>
           </div>
         </div>
-      </header>
+      </div>
+    </header>
+    <div class="container">
       <main>
         <div class="form-div" data-view="entry-form">
           <div class="row">
@@ -61,7 +63,7 @@
               </div>
           </form>
         </div>
-    </main>
+      </main>
   </div>
   <script src="js/data.js"></script>
   <script src="js/main.js"></script>
