Made data-view=entries and ul

--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
               </div>
           </form>
         </div>
+
+        <div class="entries-div" data-view="entries">
+
+        </div>
       </main>
   </div>
   <script src="js/data.js"></script>
