Returns entries from dom

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </header>
     <div class="container">
       <main>
-        <!-- <div class="form-div" data-view="entry-form">
+        <div class="form-div hidden" data-view="entry-form">
           <div class="row">
             <div class="column-full">
               <h1 class="form-h1">New Entry</h1>
@@ -64,7 +64,7 @@
                 </div>
               </div>
           </form>
-        </div> -->
+        </div>
 
         <div class="entries-div" data-view="entries">
           <div class="row entries-title-row">
@@ -75,22 +75,24 @@
               <button class="new-button rounded">New</button>
             </div>
           </div>
-          <ul>
+          <ul class="entries-list">
             <li>
 
               <div class="row">
+
                 <div class="column-half">
                   <img src="images/placeholder-image-square.jpg" alt="placeholder" class="placeholder-img rounded form-item-div">
                 </div>
+
                 <div class="column-half">
                   <div class="form-item-div input-bottom-margin">
                     <h2>Lorem, ipsum.</h2>
                     <p>Lorem ipsum dolor sit amet consectetur
                       adipisicing elit. Natus, laboriosam.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur
-                      adipisicing elit. Natus, laboriosam.</p>
+
                   </div>
                 </div>
+
               </div>
 
             </li>
@@ -106,8 +108,7 @@
                     <h2>Lorem, ipsum.</h2>
                     <p>Lorem ipsum dolor sit amet consectetur
                       adipisicing elit. Natus, laboriosam.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur
-                      adipisicing elit. Natus, laboriosam.</p>
+
                   </div>
                 </div>
               </div>
