Form prepends new entry to dom

--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
         <div class="row header-div">
           <div class="column-half header">
             <h3 class="head-box-text">Code Journal</h3>
-
+          </div>
+          <div class="column-half header">
+            <nav class="header-nav">
+              <a href="#entries" class="header-nav-item">Entries</a>
+            </nav>
           </div>
 
         </div>
@@ -66,7 +70,7 @@
           </form>
         </div>
 
-        <div class="entries-div" data-view="entries">
+        <div class="entries-div" data-view="entries" id="entries">
           <div class="row entries-title-row">
             <div class="column-half entries-title">
               <h1 class="form-h1">Entries</h1>
@@ -76,44 +80,9 @@
             </div>
           </div>
           <ul class="entries-list">
-            <li>
 
-              <div class="row">
 
-                <div class="column-half">
-                  <img src="images/placeholder-image-square.jpg" alt="placeholder" class="placeholder-img rounded form-item-div">
-                </div>
 
-                <div class="column-half">
-                  <div class="form-item-div input-bottom-margin">
-                    <h2>Lorem, ipsum.</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur
-                      adipisicing elit. Natus, laboriosam.</p>
-
-                  </div>
-                </div>
-
-              </div>
-
-            </li>
-
-            <li>
-
-              <div class="row">
-                <div class="column-half">
-                  <img src="images/placeholder-image-square.jpg" alt="placeholder" class="placeholder-img rounded form-item-div">
-                </div>
-                <div class="column-half">
-                  <div class="form-item-div input-bottom-margin">
-                    <h2>Lorem, ipsum.</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur
-                      adipisicing elit. Natus, laboriosam.</p>
-
-                  </div>
-                </div>
-              </div>
-
-            </li>
           </ul>
         </div>
 
