Issue 3: final upload

--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
               <a href="#entries" class="header-nav-item">Entries</a>
             </nav>
           </div>
-
         </div>
       </div>
     </header>
@@ -69,7 +68,6 @@
               </div>
           </form>
         </div>
-
         <div class="entries-div" data-view="entries" id="entries">
           <div class="row entries-title-row">
             <div class="column-half entries-title">
@@ -80,9 +78,7 @@
             </div>
           </div>
           <ul class="entries-list">
-
-
-
+           <!-- DELETE THIS BEFORE FINAL PRODUCTION. I need to edit LIs -->
            <!-- <li data-entry-id="1">
             <div class="row">
               <div class="column-half"><img class="placeholder-img rounded form-item-div"
@@ -100,14 +96,8 @@
               </div>
             </div>
           </li> -->
-
-
-
-
           </ul>
         </div>
-
-
       </main>
   </div>
   <script src="js/data.js"></script>
