Entry removed from data model and local storage

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
               </div>
               <div class="row">
                 <div class="column-half width-50">
-                  <p class="delete-text">Delete Entry</p>
+                  <p class="delete-text hidden">Delete Entry</p>
                 </div>
                 <div class="column-half width-50">
                   <button type="submit" form="codeform" class="form-button rounded" >SAVE</button>
